fix race condition in csrf generation

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -119,6 +119,7 @@
 @import 'components/timeline.css';
 @import 'components/section-header.css';
 @import 'components/tooltip.css';
+@import 'components/notifications.css';
 
 // Import utilities
 @import 'icons/icons.css';
